JS Clock Updates
- Added Responsiveness

--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
     <!--Style CSS-->
 </head>
 <body>
-    <section class="time">
-        <h1>Time is ticking...</h1>
-        <p id="currentTime">TIME</p>
-        <span>spend your time wisely</span>
-    </section>
+    <div class="page-container">
+        <section class="time">
+            <h1>Time is ticking...</h1>
+            <p id="currentTime">TIME</p>
+            <span>spend your time wisely</span>
+        </section>
 
-    <section class="theme">
-        <div>
-            <form action="/">
-                <h2>Theme:</h2>
-                <label for="brightTheme">Bright</label>
-                <input type="radio" name="theme" value="brightTheme" id="brightTheme">
-                <label for="darkTheme">Dark</label>
-                <input type="radio" name="theme" value="darkTheme" id="darkTheme">
-            </form>
-        </div>
-    </section>
+        <section class="theme">
+            <div>
+                <form action="/">
+                    <h2>Theme:</h2>
+                    <label for="brightTheme">Bright</label>
+                    <input type="radio" name="theme" value="brightTheme" id="brightTheme">
+                    <label for="darkTheme">Dark</label>
+                    <input type="radio" name="theme" value="darkTheme" id="darkTheme">
+                </form>
+            </div>
+        </section>
+    </div>
     <script src="dist/app.js"></script>
 </body>
 </html>
